# icai_crl_bringup_sim

./: CMakeLists.txt  README.md  package.xml
config/: FlySky_FS-i6S.config.yaml  gazebo_debug_gui.config  gazebo_gui.config  kitt_bridge.yaml  kitt_dd_bridge.yaml  kitt_fpv_bridge.yaml  kitt_fpv_dd_bridge.yaml  kitt_mapping_bridge.yaml  kitt_md25_bridge.yaml  kitt_md25_bridge_o1.yaml  kitt_md25_bridge_o2.yaml  kitt_md25_bridge_o3.yaml  kitt_nav_bridge.yaml  kitt_nav_dd_bridge.yaml  kitt_nav_md25_bridge.yaml  launch_001.yaml  launch_002.yaml  launch_003.yaml
launch/: complete_kitt_nav_dd.launch.py  control_lab_amcl_wp_local.launch.py  control_lab_kitt_dd_gui.launch.py  control_lab_kitt_mapping_dd_gui.launch.py  control_lab_kitt_md25_gui.launch.py  control_lab_kitt_md25_o1_gui.launch.py  control_lab_kitt_md25_o2_gui.launch.py  control_lab_kitt_md25_o3_gui.launch.py  control_lab_kitt_nav_dd_gui.launch.py  control_lab_labeled_kitt_dd_gui.launch.py  control_lab_labeled_kitt_md25_gui.launch.py  control_lab_labeled_kitt_nav_dd_gui.launch.py  control_lab_labeled_kitt_nav_md25_gui.launch.py  demo_fpv_joy.launch.py  labeled_kitt_dd.py  labeled_kitt_md25.py  labeled_kitt_nav_dd.py  labeled_kitt_nav_md25.py  launch_and_joy.launch.py  nav_dd_and_joy.launch.py  prueba_par.launch.py  ramp_circuit_kitt_dd_gui.launch.py  ramp_circuit_kitt_md25_gui.launch.py  ramp_circuit_kitt_md25_o1_gui.launch.py  ramp_circuit_kitt_md25_o2_gui.launch.py  ramp_circuit_kitt_md25_o3_gui.launch.py  yaml_simulation_launcher.launch.py
map/: map.pgm  map.yaml
