<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icai_crl_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the Gazebo Control Laboratory project</description>
  <maintainer email="dcubillo@comillas.edu">Diego Cubillo</maintainer>
  <license>Apache 2.0</license>
  <author>Diego Cubillo</author>

  <depend>ros_gz</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>rqt_image_view</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_map_server</depend>

  <depend>icai_crl_description</depend>
  <depend>icai_crl_gazebo</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>